fix: adjust video page title and buttons spacing

--- a/styles.css
+++ b/styles.css
@@ -192,9 +192,17 @@ button.action {
   border-radius: 1%;
 }
 
-.video-title {
-  font-size: 1.25rem;
+.page-video .video-title {
+  font-size: 1.3rem;
   margin-top: 0.65rem;
+}
+
+.video-meta-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .video-meta {
@@ -209,9 +217,9 @@ button.action {
 .video-channel {
   display: flex;
   flex-direction: row;
-  width: 100%;
   margin-top: 0.5rem;
   gap: 0.75rem;
+  flex: 0 0 auto;
 }
 
 .channel-info {
@@ -233,7 +241,7 @@ button.action {
 .video-actions {
   display: flex;
   flex-direction: row;
-  width: 45%;
+  flex: 0 0 auto;
   gap: 0.85rem;
 }
 
